--- a/hp/add-print-non-pure/_modules/gstaichi/lang/misc.html
+++ b/hp/add-print-non-pure/_modules/gstaichi/lang/misc.html
@@ -709,6 +709,8 @@
 <span class="sd">        default_fp (Optional[type]): Default floating-point type.</span>
 <span class="sd">        default_ip (Optional[type]): Default integral type.</span>
 <span class="sd">        require_version: A version string.</span>
+<span class="sd">        print_non_pure: Print the names of kernels, at the time they are executed, which are not annotated with</span>
+<span class="sd">                        @ti.pure</span>
 <span class="sd">        src_ll_cache: enable SRC-LL-CACHE, which will accelerate loading from cache, across all architectures,</span>
 <span class="sd">                      for pure kernels (i.e. kernels declared as @ti.pure)</span>
 <span class="sd">        **kwargs: GsTaichi provides highly customizable compilation through</span>
