--- a/hp/better-error-output/_modules/gstaichi/lang/kernel_impl.html
+++ b/hp/better-error-output/_modules/gstaichi/lang/kernel_impl.html
@@ -678,27 +678,23 @@
         <span class="k">else</span><span class="p">:</span>
             <span class="k">raise</span> <span class="n">GsTaichiSyntaxError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Unexpected argument &#39;</span><span class="si">{</span><span class="n">key</span><span class="si">}</span><span class="s2">&#39;.&quot;</span><span class="p">)</span>
 
-    <span class="n">missing_annotations</span> <span class="o">=</span> <span class="p">[]</span>
+    <span class="n">missing_parameters</span> <span class="o">=</span> <span class="p">[]</span>
     <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">arg</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">fused_args</span><span class="p">):</span>
         <span class="k">if</span> <span class="n">arg</span> <span class="ow">is</span> <span class="n">inspect</span><span class="o">.</span><span class="n">Parameter</span><span class="o">.</span><span class="n">empty</span><span class="p">:</span>
             <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">arg_metas</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">.</span><span class="n">annotation</span> <span class="ow">is</span> <span class="n">inspect</span><span class="o">.</span><span class="n">_empty</span><span class="p">:</span>
-                <span class="c1"># raise GsTaichiSyntaxError(f&quot;Parameter `{self.arg_metas[i].name}` missing.&quot;)</span>
-                <span class="n">missing_annotations</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Parameter `</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">arg_metas</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">.</span><span class="n">name</span><span class="si">}</span><span class="s2">` missing.&quot;</span><span class="p">)</span>
+                <span class="n">missing_parameters</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Parameter `</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">arg_metas</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">.</span><span class="n">name</span><span class="si">}</span><span class="s2">` missing.&quot;</span><span class="p">)</span>
             <span class="k">else</span><span class="p">:</span>
-                <span class="n">missing_annotations</span><span class="o">.</span><span class="n">append</span><span class="p">(</span>
+                <span class="n">missing_parameters</span><span class="o">.</span><span class="n">append</span><span class="p">(</span>
                     <span class="sa">f</span><span class="s2">&quot;Parameter `</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">arg_metas</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">.</span><span class="n">name</span><span class="si">}</span><span class="s2"> : </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">arg_metas</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">.</span><span class="n">annotation</span><span class="si">}</span><span class="s2">` missing.&quot;</span>
                 <span class="p">)</span>
-                <span class="c1"># raise GsTaichiSyntaxError(</span>
-                <span class="c1">#     f&quot;Parameter `{self.arg_metas[i].name} : {self.arg_metas[i].annotation}` missing.&quot;</span>
-                <span class="c1"># )</span>
-    <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">missing_annotations</span><span class="p">)</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">:</span>
+    <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">missing_parameters</span><span class="p">)</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">:</span>
         <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;fused args:&quot;</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">arg</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">fused_args</span><span class="p">):</span>
             <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;  &quot;</span><span class="p">,</span> <span class="n">i</span><span class="p">,</span> <span class="n">arg</span><span class="p">)</span>
         <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;arg metas:&quot;</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">arg</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">arg_metas</span><span class="p">):</span>
             <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;  &quot;</span><span class="p">,</span> <span class="n">i</span><span class="p">,</span> <span class="n">arg</span><span class="p">)</span>
-        <span class="k">raise</span> <span class="n">GsTaichiSyntaxError</span><span class="p">(</span><span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">missing_annotations</span><span class="p">))</span>
+        <span class="k">raise</span> <span class="n">GsTaichiSyntaxError</span><span class="p">(</span><span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">missing_parameters</span><span class="p">))</span>
 
     <span class="k">return</span> <span class="nb">tuple</span><span class="p">(</span><span class="n">fused_args</span><span class="p">)</span>
 
@@ -1338,7 +1334,7 @@
                 <span class="k">return</span> <span class="mi">1</span>
             <span class="k">if</span> <span class="n">dataclasses</span><span class="o">.</span><span class="n">is_dataclass</span><span class="p">(</span><span class="n">needed_arg_type</span><span class="p">):</span>
                 <span class="k">if</span> <span class="n">provided_arg_type</span> <span class="o">!=</span> <span class="n">needed_arg_type</span><span class="p">:</span>
-                    <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;needed&quot;</span><span class="p">,</span> <span class="n">needed_arg_type</span><span class="p">,</span> <span class="s2">&quot;!= provided&quot;</span><span class="p">,</span> <span class="n">provided_arg_type</span><span class="p">)</span>
+                    <span class="k">raise</span> <span class="n">GsTaichiRuntimeError</span><span class="p">(</span><span class="s2">&quot;needed&quot;</span><span class="p">,</span> <span class="n">needed_arg_type</span><span class="p">,</span> <span class="s2">&quot;!= provided&quot;</span><span class="p">,</span> <span class="n">provided_arg_type</span><span class="p">)</span>
                 <span class="k">assert</span> <span class="n">provided_arg_type</span> <span class="o">==</span> <span class="n">needed_arg_type</span>
                 <span class="n">idx</span> <span class="o">=</span> <span class="mi">0</span>
                 <span class="k">for</span> <span class="n">j</span><span class="p">,</span> <span class="n">field</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">dataclasses</span><span class="o">.</span><span class="n">fields</span><span class="p">(</span><span class="n">needed_arg_type</span><span class="p">)):</span>
