deploy: 25514603fb9dae4f4d80ea872af97f83405396ac

--- a/hp/for-with-if-1/_modules/gstaichi/lang/ast/ast_transformer.html
+++ b/hp/for-with-if-1/_modules/gstaichi/lang/ast/ast_transformer.html
@@ -1594,12 +1594,12 @@
                 <span class="c1"># - being an inner loop</span>
                 <span class="c1"># - either side can be static or not, as long as the if expression itself is static</span>
                 <span class="n">_iter</span> <span class="o">=</span> <span class="n">node</span><span class="o">.</span><span class="n">iter</span>
-                <span class="n">build_stmt</span><span class="p">(</span><span class="n">ctx</span><span class="p">,</span> <span class="n">node</span><span class="o">.</span><span class="n">iter</span><span class="p">)</span>
                 <span class="n">is_static_if</span> <span class="o">=</span> <span class="n">get_decorator</span><span class="p">(</span><span class="n">ctx</span><span class="p">,</span> <span class="n">node</span><span class="o">.</span><span class="n">iter</span><span class="o">.</span><span class="n">test</span><span class="p">)</span> <span class="o">==</span> <span class="s2">&quot;static&quot;</span>
                 <span class="k">if</span> <span class="ow">not</span> <span class="n">is_static_if</span><span class="p">:</span>
                     <span class="k">raise</span> <span class="n">GsTaichiSyntaxError</span><span class="p">(</span>
                         <span class="s2">&quot;Using non static inlined if statement as for-loop iterable is not currently supported.&quot;</span>
                     <span class="p">)</span>
+                <span class="n">build_stmt</span><span class="p">(</span><span class="n">ctx</span><span class="p">,</span> <span class="n">_iter</span><span class="o">.</span><span class="n">test</span><span class="p">)</span>
                 <span class="n">next_iter</span> <span class="o">=</span> <span class="n">_iter</span><span class="o">.</span><span class="n">body</span> <span class="k">if</span> <span class="n">_iter</span><span class="o">.</span><span class="n">test</span><span class="o">.</span><span class="n">ptr</span> <span class="k">else</span> <span class="n">_iter</span><span class="o">.</span><span class="n">orelse</span>
                 <span class="n">new_for</span> <span class="o">=</span> <span class="n">ast</span><span class="o">.</span><span class="n">For</span><span class="p">(</span>
                     <span class="n">target</span><span class="o">=</span><span class="n">node</span><span class="o">.</span><span class="n">target</span><span class="p">,</span>
